# denis

./: README.md
denis_bringup/: CMakeLists.txt  package.xml
denis_bringup/config/: gazebo_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml
denis_bringup/launch/: camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rsp.launch.py
denis_bringup/maps/: erdem_ev.pgm  restaurant.pgm  restaurant.yaml
denis_bringup/rooms/: ev.yaml
denis_bt/: CMakeLists.txt  package.xml  plugin.xml
denis_bt/config/: custom_bt.xml
denis_bt/src/: check_zone_bt.cpp
denis_description/: CMakeLists.txt  package.xml
denis_description/ros2_control/: ros2_control.xacro
denis_description/rviz/: denis_nav_config.rviz
denis_description/urdf/: camera.xacro  common_properties.xacro  denis.urdf.xacro  inertia.xacro  lidar.xacro
denis_hardware/: CMakeLists.txt  denis_hardware.xml  package.xml
denis_hardware/include/denis_hardware/: diff_denis_system.hpp  wheel.hpp
denis_hardware/src/: diff_denis_system.cpp
denis_image_processor/: package.xml  setup.cfg  setup.py
denis_image_processor/denis_image_processor/: face_detector.py
denis_v1_bringup/: CMakeLists.txt  package.xml
denis_v1_bringup/config/: denis_controllers.yaml  gazebo_bridge.yaml  nav2_params.yaml  twist_mux.yaml
denis_v1_bringup/launch/: camera.launch.py  display.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rplidar.launch.py  rsp.launch.py
denis_v1_bringup/maps/: erdem_ev.yaml  restaurant.yaml
denis_v1_bringup/rooms/: restaurant.yaml
denis_v1_bringup/worlds/: nav2_test.sdf
denis_v1_bt/: CMakeLists.txt  package.xml  plugin.xml
denis_v1_bt/config/: custom_bt.xml
denis_v1_bt/src/: check_zone_bt.cpp  ramp_acceleration.cpp
denis_v1_description/: CMakeLists.txt  package.xml
denis_v1_description/launch/: display.launch.py
denis_v1_description/ros2_control/: ros2_control.xacro
denis_v1_description/rviz/: config.rviz  denis_config.rviz  denis_sim_config.rviz  denis_slam_config.rviz
denis_v1_description/urdf/: camera.xacro  common_properties.xacro  denis.urdf.xacro  gazebo_control.xacro  inertia.xacro  lidar.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  ros2_control.xacro
denis_v1_hardware/: CMakeLists.txt  denis_v1_hardware.xml  package.xml
denis_v1_hardware/include/denis_v1_hardware/: arduino_comms.hpp  comms.hpp  diff_denis_system.hpp  wheel.hpp
denis_v1_hardware/src/: diff_denis_system.cpp
